src/tacky/snapshots/minic__tacky__tests__simpl_return.snap
---
source: src/tacky/tests.rs
expression: "test_string_success(\"int main(void) { return 0; }\")?"
---
name: main
body:
  - Return:
      Constant: 0
