src/tacky/snapshots/minic__tacky__tests__unary_return.snap
---
source: src/tacky/tests.rs
expression: "test_string_success(\"int main(void) { return ~-42; }\")?"
---
name: main
body:
  - Unary:
      op: Negate
      dest:
        Var: 0
      src:
        Constant: 42
  - Unary:
      op: BitNot
      dest:
        Var: 1
      src:
        Var: 0
  - Return:
      Var: 1
